[package]
name = "task-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
derive_more = "0.99"
strum = "0.25"
strum_macros = "0.25"

# MongoDB
mongodb = "2.6"
bson = { version = "2.6", features = ["chrono-0_4"] }

# Redis
redis = { version = "0.23", features = ["tokio-comp"] }
futures = "0.3"

# Removed AWS dependencies
# aws-config = "0.55"
# aws-sdk-dynamodb = "0.28"
# aws-sdk-sqs = "0.28"
